force-app/main/default/objects/Lead/fields/Additional_Referring_Name__c.field-meta.xml
<CustomField>
    <fullName>Additional_Referring_Name__c</fullName>
    <description>used when bank leads come in with 2 referring employees. the first referring employee is placed in the Referral Contact lookup field and the second is placed in this text field. this field is mapped to the Opportunity.Additional_Referring_Name__c field</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Additional Referring Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>