force-app/main/default/objects/Lead/fields/amp_dev__Referring_Partner__c.field-meta.xml
<CustomField>
    <fullName>amp_dev__Referring_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Account, having an associated Amp_Partner__c record, to which a Referral Lead (and the Lead&apos;s Referring Advocate) belong.</description>
    <label>Referring Partner</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.amp_dev__Amp_Partner__c</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Amplifinity Referral Leads</relationshipLabel>
    <relationshipName>Referral_Leads</relationshipName>
    <type>Lookup</type>
</CustomField>