force-app/main/default/objects/Lead/fields/AssignedToNSR__c.field-meta.xml
<CustomField>
    <fullName>AssignedToNSR__c</fullName>
    <formula>Owner:User.Job_Name__c = $Label.JobNSR</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned To NSR</label>
    <type>Checkbox</type>
</CustomField>