force-app/main/default/objects/Lead/fields/Bank_Lead_ID__c.field-meta.xml
<CustomField>
    <fullName>Bank_Lead_ID__c</fullName>
    <description>Lead ID uniquely identifying this lead and used to track and report leads</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Lead ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>