force-app/main/default/objects/Lead/fields/BuyerZone_Lead_ID__c.field-meta.xml
<CustomField>
    <fullName>BuyerZone_Lead_ID__c</fullName>
    <description>Case 35693997 Read/Write for Marketo to allow information to pass back based on the Lead ID</description>
    <encryptionScheme>None</encryptionScheme>
    <label>BuyerZone Lead ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>