force-app/main/default/objects/Lead/fields/Client_Referral__c.field-meta.xml
<CustomField>
    <fullName>Client_Referral__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>lookup field back to account object to identify the client who referred this lead</description>
    <inlineHelpText>Client who referred this Lead.
Enter Client name and click on magnifying glass and select appropriate client who referred this lead.</inlineHelpText>
    <label>Client Referral</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Referred Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>