force-app/main/default/objects/Lead/fields/CreatedByProcess__c.field-meta.xml
<CustomField>
    <fullName>CreatedByProcess__c</fullName>
    <description>The initial purpose of this is to identify that Marketo created this record to know that it should stay as part of the Marketo sync.</description>
    <inlineHelpText>The process that created this record</inlineHelpText>
    <label>Created By Process</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Marketo</fullName>
            </value>
            <value>
                <fullName>Oasis</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>