force-app/main/default/objects/Lead/fields/CSSR_Segment__c.field-meta.xml
<CustomField>
    <fullName>CSSR_Segment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created for ownership by CSSR, should never be checked because CSSR&apos;s are only supposed to own accounts that have ran payroll for a year.  Had to create this field because zip logic is shared between lead/account</description>
    <label>CSSR Segment</label>
    <type>Checkbox</type>
</CustomField>