force-app/main/default/objects/Lead/fields/Current_ATS_System__c.field-meta.xml
<CustomField>
    <fullName>Current_ATS_System__c</fullName>
    <label>Current ATS System</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ADP - also listed as eEase</fullName>
            </value>
            <value>
                <fullName>AppliTrack</fullName>
            </value>
            <value>
                <fullName>Apply2Jobs</fullName>
            </value>
            <value>
                <fullName>Brass Ring (bought by Kenexa/IBM)</fullName>
            </value>
            <value>
                <fullName>Bullhorn (bought by SumTotal)</fullName>
            </value>
            <value>
                <fullName>CATS</fullName>
            </value>
            <value>
                <fullName>Ceridian</fullName>
            </value>
            <value>
                <fullName>Healthcare Source</fullName>
            </value>
            <value>
                <fullName>HodesIQ (now Technomedia)</fullName>
            </value>
            <value>
                <fullName>HRSmart</fullName>
            </value>
            <value>
                <fullName>iApplicants</fullName>
            </value>
            <value>
                <fullName>ICIMS</fullName>
            </value>
            <value>
                <fullName>In-House  - also listed as homegrown or internal</fullName>
            </value>
            <value>
                <fullName>Job Board - also listed as Monster, CareerBuilder</fullName>
            </value>
            <value>
                <fullName>JobScience</fullName>
            </value>
            <value>
                <fullName>Kenexa (bought by IBM)</fullName>
            </value>
            <value>
                <fullName>MaxHire</fullName>
            </value>
            <value>
                <fullName>NEOGOV</fullName>
            </value>
            <value>
                <fullName>Newton</fullName>
            </value>
            <value>
                <fullName>None - also listed as No ATS and Manual</fullName>
            </value>
            <value>
                <fullName>Oracle</fullName>
            </value>
            <value>
                <fullName>PeopleFluent/PeopleClick</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>SAP</fullName>
            </value>
            <value>
                <fullName>SilkRoad OpenHire</fullName>
            </value>
            <value>
                <fullName>Smart Recruiters</fullName>
            </value>
            <value>
                <fullName>Sonic Recruit (bought by Taleo/Oracle)</fullName>
            </value>
            <value>
                <fullName>Success Factors (now SAP)</fullName>
            </value>
            <value>
                <fullName>Taleo (now Oracle)  - also listed as TBE</fullName>
            </value>
            <value>
                <fullName>Ultimate Software - also listed as aka Uti and Ultirecruit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>