force-app/main/default/objects/Lead/fields/Current_Prior_Method__c.field-meta.xml
<CustomField>
    <fullName>Current_Prior_Method__c</fullName>
    <label>Payroll Current-Prior Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AccessPoint</fullName>
            </value>
            <value>
                <fullName>Adam&apos;s Keegan-PEO</fullName>
            </value>
            <value>
                <fullName>Administaff-PEO</fullName>
            </value>
            <value>
                <fullName>ADP</fullName>
            </value>
            <value>
                <fullName>ADP Pay eXpert</fullName>
            </value>
            <value>
                <fullName>ADP Payforce</fullName>
            </value>
            <value>
                <fullName>ADP PC/Payroll for Windows</fullName>
            </value>
            <value>
                <fullName>ADP Run</fullName>
            </value>
            <value>
                <fullName>ADP Total Source-PEO</fullName>
            </value>
            <value>
                <fullName>ADP Workforce Now</fullName>
            </value>
            <value>
                <fullName>Advantage HR-PEO</fullName>
            </value>
            <value>
                <fullName>Advantage Payroll</fullName>
            </value>
            <value>
                <fullName>AEG (American Employer Group)-PEO</fullName>
            </value>
            <value>
                <fullName>Agile HR</fullName>
            </value>
            <value>
                <fullName>Allstaff-PEO</fullName>
            </value>
            <value>
                <fullName>Alpha Staff-PEO</fullName>
            </value>
            <value>
                <fullName>Ambassador-PEO</fullName>
            </value>
            <value>
                <fullName>Amstaff-PEO</fullName>
            </value>
            <value>
                <fullName>Asure Software</fullName>
            </value>
            <value>
                <fullName>Attorney</fullName>
            </value>
            <value>
                <fullName>Bank</fullName>
            </value>
            <value>
                <fullName>BenefitMall</fullName>
            </value>
            <value>
                <fullName>Ceridian</fullName>
            </value>
            <value>
                <fullName>Certipay</fullName>
            </value>
            <value>
                <fullName>Co-Advantage-PEO</fullName>
            </value>
            <value>
                <fullName>Computer</fullName>
            </value>
            <value>
                <fullName>Connect Pay</fullName>
            </value>
            <value>
                <fullName>Core Client</fullName>
            </value>
            <value>
                <fullName>CPA</fullName>
            </value>
            <value>
                <fullName>Current Broker</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>