force-app/main/default/objects/Lead/fields/Dataflux_Id__c.field-meta.xml
<CustomField>
    <fullName>Dataflux_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <inlineHelpText>External Id from the Dataflux server</inlineHelpText>
    <label>Dataflux Id</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>