force-app/main/default/objects/Lead/fields/Date_Lead_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Date_Lead_Submitted__c</fullName>
    <description>Date the lead was submitted by Tier 1 Bank - comes from LTS</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Lead Submitted</label>
    <type>Date</type>
</CustomField>