force-app/main/default/objects/Lead/fields/Decision_Maker__c.field-meta.xml
<CustomField>
    <fullName>Decision_Maker__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Gets passed through Lead Field Mappings to make sure that converted lead contacts get the decision maker box checked.</description>
    <label>Decision Maker</label>
    <type>Checkbox</type>
</CustomField>