force-app/main/default/objects/Lead/fields/DisqualifiedReason__c.field-meta.xml
<CustomField>
    <fullName>DisqualifiedReason__c</fullName>
    <inlineHelpText>The Disqualified Reason from the Oasis system</inlineHelpText>
    <label>Disqualified Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Add to Do Not Call List</fullName>
            </value>
            <value>
                <fullName>Do Not Call</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>High Risk - Benefits</fullName>
            </value>
            <value>
                <fullName>High Risk - WC</fullName>
            </value>
            <value>
                <fullName>Low Budget</fullName>
            </value>
            <value>
                <fullName>Low Employee Count</fullName>
            </value>
            <value>
                <fullName>Low Interest</fullName>
            </value>
            <value>
                <fullName>Non-Profit</fullName>
            </value>
            <value>
                <fullName>No Response</fullName>
            </value>
            <value>
                <fullName>Not a Fit</fullName>
            </value>
            <value>
                <fullName>Out of Business or Acquired or Paychex</fullName>
            </value>
            <value>
                <fullName>Send for data update</fullName>
            </value>
            <value>
                <fullName>Send to ASO</fullName>
            </value>
            <value>
                <fullName>Send to Marketing for nurturing</fullName>
            </value>
            <value>
                <fullName>Too Large</fullName>
            </value>
            <value>
                <fullName>Wrong Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>