force-app/main/default/objects/Lead/fields/DOZISF__ZoomInfo_First_Updated__c.field-meta.xml
<CustomField>
    <fullName>DOZISF__ZoomInfo_First_Updated__c</fullName>
    <description>Date and time when the record was first created or updated by ZoomInfo</description>
    <encryptionScheme>None</encryptionScheme>
    <label>ZoomInfo First Updated</label>
    <type>DateTime</type>
</CustomField>