force-app/main/default/objects/Lead/fields/DS_Packages__Active_Cadence_IDs__c.field-meta.xml
<CustomField>
    <fullName>DS_Packages__Active_Cadence_IDs__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Active Cadence IDs</label>
    <type>TextArea</type>
</CustomField>