force-app/main/default/objects/Lead/fields/Duplicate_OK__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_OK__c</fullName>
    <defaultValue>false</defaultValue>
    <description>set by CloneLeadAddlContact trigger</description>
    <inlineHelpText>used in Dupe Blocker scenario filter to exclude this record</inlineHelpText>
    <label>Duplicate OK</label>
    <type>Checkbox</type>
</CustomField>