force-app/main/default/objects/Lead/fields/DuplicateCheckStatus__c.field-meta.xml
<CustomField>
    <fullName>DuplicateCheckStatus__c</fullName>
    <inlineHelpText>If a duplicate check was performed on this record, what is the result of the check?</inlineHelpText>
    <label>Duplicate Check Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No Match Found</fullName>
            </value>
            <value>
                <fullName>Lead Match</fullName>
            </value>
            <value>
                <fullName>Contact Match</fullName>
            </value>
            <value>
                <fullName>Account Match</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>