force-app/main/default/objects/Lead/fields/EvaluateCadence__c.field-meta.xml
<CustomField>
    <fullName>EvaluateCadence__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Evaluate the cadence fields attached to this record (if any).</inlineHelpText>
    <label>Evaluate Cadence</label>
    <type>Checkbox</type>
</CustomField>