force-app/main/default/objects/Lead/fields/Exception_Reason__c.field-meta.xml
<CustomField>
    <fullName>Exception_Reason__c</fullName>
    <description>This will be populated with the exception reason from the Bank Lead insertion process.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Exception Reason</label>
    <length>50</length>
    <type>Text</type>
</CustomField>