force-app/main/default/objects/Lead/fields/Fed_ID_Name__c.field-meta.xml
<CustomField>
    <fullName>Fed_ID_Name__c</fullName>
    <description>Store the Federal Id Name of the account that Paychex is doing business with</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Fed ID Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>