force-app/main/default/objects/Lead/fields/Groove_Last_Flow_Status__c.field-meta.xml
<CustomField>
    <fullName>Groove_Last_Flow_Status__c</fullName>
    <description>Status for the Flow this person was most recently added to (active, removed, completed)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Flow Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>