force-app/main/default/objects/Lead/fields/Groove_Removed_From_Flow_Date__c.field-meta.xml
<CustomField>
    <fullName>Groove_Removed_From_Flow_Date__c</fullName>
    <description>Date when this person was removed from the Flow they were most recently added to</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Removed From Flow Date</label>
    <type>Date</type>
</CustomField>