force-app/main/default/objects/Lead/fields/Hold_Out__c.field-meta.xml
<CustomField>
    <fullName>Hold_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <description>used to keep lead ownership assigned to specified sales rep for 90 days preventing NSS zip assignment from re-assigning</description>
    <label>Hold Out</label>
    <type>Checkbox</type>
</CustomField>