force-app/main/default/objects/Lead/fields/Hold_Out_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Hold_Out_Expiration__c</fullName>
    <description>sets the expiration for the hold out - currently at 90 days</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Hold Out Expiration</label>
    <type>Date</type>
</CustomField>