force-app/main/default/objects/Lead/fields/Hold_Out_Reason__c.field-meta.xml
<CustomField>
    <fullName>Hold_Out_Reason__c</fullName>
    <inlineHelpText>The reason for the hold out.</inlineHelpText>
    <label>Hold Out Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NSR Working</fullName>
            </value>
            <value>
                <fullName>Oasis</fullName>
            </value>
            <value>
                <fullName>Ecommerce</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>