force-app/main/default/objects/Lead/fields/LatestCampaign__c.field-meta.xml
<CustomField>
    <fullName>LatestCampaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The latest campaign this record was attached to (via the lead loader)</inlineHelpText>
    <label>Latest Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Leads-Latest Campaign</relationshipLabel>
    <relationshipName>LeadsLatestCampaign</relationshipName>
    <type>Lookup</type>
</CustomField>