force-app/main/default/objects/Lead/fields/LatestCampaignDate__c.field-meta.xml
<CustomField>
    <fullName>LatestCampaignDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The Date/Time the Latest Campaign was last set.</inlineHelpText>
    <label>Latest Campaign Date</label>
    <type>DateTime</type>
</CustomField>