force-app/main/default/objects/Lead/fields/Lead_Company__c.field-meta.xml
<CustomField>
    <fullName>Lead_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead Company</label>
    <referenceTo>Lead_Company__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>