force-app/main/default/objects/Lead/fields/Lead_Stage__c.field-meta.xml
<CustomField>
    <fullName>Lead_Stage__c</fullName>
    <label>Lead Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Auto MQL</fullName>
            </value>
            <value>
                <fullName>Inquiry</fullName>
            </value>
            <value>
                <fullName>MQL</fullName>
            </value>
            <value>
                <fullName>Recycle</fullName>
            </value>
            <value>
                <fullName>Reject</fullName>
            </value>
            <value>
                <fullName>Suspect</fullName>
            </value>
            <value>
                <fullName>TAL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>