force-app/main/default/objects/Lead/fields/LeadGroupId__c.field-meta.xml
<CustomField>
    <fullName>LeadGroupId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <inlineHelpText>External Id from the Dataflux server</inlineHelpText>
    <label>LeadGroup Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>