force-app/main/default/objects/Lead/fields/Leslie_Field_for_NSS_Updates__c.field-meta.xml
<CustomField>
    <fullName>Leslie_Field_for_NSS_Updates__c</fullName>
    <description>Temporary field to be used to force Lead Company population</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Leslie Field for NSS Updates</label>
    <length>10</length>
    <type>Text</type>
</CustomField>