force-app/main/default/objects/Lead/fields/Marketing_Block_Reason__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Block_Reason__c</fullName>
    <description>The value of this field drives whether or not the record will sync with Marketo (Always Sync will always force the Lead/Contact to have an open sync with Marketo)</description>
    <inlineHelpText>Choose the value to always block the sync or always enable the sync</inlineHelpText>
    <label>Marketing Sync Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Marketing Duplicate</fullName>
            </value>
            <value>
                <fullName>Consumer</fullName>
            </value>
            <value>
                <fullName>Data-only Prospect</fullName>
            </value>
            <value>
                <fullName>Always Sync</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>