force-app/main/default/objects/Lead/fields/Marketo_Interest_Score__c.field-meta.xml
<CustomField>
    <fullName>Marketo_Interest_Score__c</fullName>
    <description>Number score of all Marketo Interest criteria (behavior)</description>
    <inlineHelpText>Number score of all Marketo Interest criteria (behavior)</inlineHelpText>
    <label>Marketo Interest Score</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>