force-app/main/default/objects/Lead/fields/Marketo_Lead_Rating__c.field-meta.xml
<CustomField>
    <fullName>Marketo_Lead_Rating__c</fullName>
    <description>Lead Rating that represents Marketo Lead Scoring range</description>
    <inlineHelpText>Lead Rating that represents Marketo Lead Scoring range</inlineHelpText>
    <label>Marketo Lead Rating</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
            <value>
                <fullName>E</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>