force-app/main/default/objects/Lead/fields/Merge__c.field-meta.xml
<CustomField>
    <fullName>Merge__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this record may be a merge, mark the record for selection.</description>
    <inlineHelpText>If this record may be a merge, mark the record for selection.</inlineHelpText>
    <label>Merge</label>
    <type>Checkbox</type>
</CustomField>