force-app/main/default/objects/Lead/fields/miedge_crm__MSID__c.field-meta.xml
<CustomField>
    <fullName>miedge_crm__MSID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>MSID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>