force-app/main/default/objects/Lead/fields/MktgId__c.field-meta.xml
<CustomField>
    <fullName>MktgId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <inlineHelpText>Id from Marketing (Marketo) used to identify this record in that system.</inlineHelpText>
    <label>Mktg Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>