force-app/main/default/objects/Lead/fields/MMS_Record_Type_Opp__c.field-meta.xml
<CustomField>
    <fullName>MMS_Record_Type_Opp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MMS Record Type-Opp</label>
    <type>Checkbox</type>
</CustomField>