force-app/main/default/objects/Lead/fields/Mthd_Lead_Rcvd__c.field-meta.xml
<CustomField>
    <fullName>Mthd_Lead_Rcvd__c</fullName>
    <label>Mthd Lead Rcvd</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sales Rep Effort</fullName>
            </value>
            <value>
                <fullName>CPA Call</fullName>
            </value>
            <value>
                <fullName>On The Spot Explore Paychex Referral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>