force-app/main/default/objects/Lead/fields/NSS_Ownership_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>NSS_Ownership_Start_Date__c</fullName>
    <description>The date this lead was assigned to an NSR. Used to manage Lead ownership rules.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The date this lead was assigned to an NSR. Used to manage Lead ownership rules.</inlineHelpText>
    <label>NSS Ownership Start Date</label>
    <type>Date</type>
</CustomField>