force-app/main/default/objects/Lead/fields/NSS_Ranking__c.field-meta.xml
<CustomField>
    <fullName>NSS_Ranking__c</fullName>
    <label>NSS Ranking</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 -COLD</fullName>
            </value>
            <value>
                <fullName>2 -WARM</fullName>
            </value>
            <value>
                <fullName>3 -HOT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>