force-app/main/default/objects/Lead/fields/NSSCallDisposition__c.field-meta.xml
<CustomField>
    <fullName>NSSCallDisposition__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The disposition of an NSS call</inlineHelpText>
    <label>NSS Call Disposition</label>
    <length>60</length>
    <type>Text</type>
</CustomField>