force-app/main/default/objects/Lead/fields/NumberOfOpens__c.field-meta.xml
<CustomField>
    <fullName>NumberOfOpens__c</fullName>
    <inlineHelpText>Number of times email was opened for this Lead</inlineHelpText>
    <label>Number Of Opens</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>