force-app/main/default/objects/Lead/fields/OasisId__c.field-meta.xml
<CustomField>
    <fullName>OasisId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <inlineHelpText>The Salesforce Id of the matching record from the Oasis Salesforce.</inlineHelpText>
    <label>Oasis Id</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>