force-app/main/default/objects/Lead/fields/Original_Bank_Emp_Number__c.field-meta.xml
<CustomField>
    <fullName>Original_Bank_Emp_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Original Bank Emp Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>